--- a/package.json
+++ b/package.json
@@ -3,10 +3,21 @@
   "module": "index.ts",
   "type": "module",
   "private": true,
+  "scripts": {
+    "exercise": "tt-cli run"
+  },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@total-typescript/exercise-cli": "^0.11.0",
+    "@types/bun": "latest",
+    "@types/node": "^22.14.1",
+    "jsdom": "^26.1.0",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^3.1.2"
   },
   "peerDependencies": {
     "typescript": "^5"
+  },
+  "dependencies": {
+    "zod": "^3.24.3"
   }
 }
